created the gatsby transformer python docstring

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -14,20 +14,20 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^16.11.12",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-starter-olap": "file:plugins/gatsby-source-olap",
     "plotly.js": "^2.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-plotly.js": "^2.5.1",
     "sass": "^1.44.0"
-  },
-  "devDependencies": {
-    "@types/node": "^16.11.12",
-    "gatsby-starter-olap": "file:plugins/gatsby-source-olap"
   }
 }
