--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ node_modules
 public
 package-lock.json
 aws/steps.json
+
+**/gatsby-transformer-python-docstring/antlr
+**/gatsby-transformer-python-docstring/src/antlr
+**/gatsby-transformer-python-docstring/listeners
+**/gatsby-transformer-python-docstring/gatsby-node*
