--- a/docs/package.json
+++ b/docs/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sass": "^5.3.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-starter-olap": "file:plugins/gatsby-source-olap",
+    "lodash": "^4.17.21",
     "plotly.js": "^2.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
