--- a/docs/package.json
+++ b/docs/package.json
@@ -18,11 +18,13 @@
   "devDependencies": {
     "@types/node": "^16.11.12",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "gatsby": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sass": "^5.3.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-starter-olap": "file:plugins/gatsby-source-olap",
+    "gatsby-transformer-remark": "^5.4.0",
     "lodash": "^4.17.21",
     "plotly.js": "^2.7.0",
     "react": "^17.0.1",
