--- a/docs/package.json
+++ b/docs/package.json
@@ -12,11 +12,15 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "build-plugins": "tsc -b plugins/gatsby-transformer-python-docstring",
+    "antlr4ts": "antlr4ts -o ./plugins/gatsby-transformer-python-docstring/src/antlr ./plugins/gatsby-transformer-python-docstring/src/grammars/Python3.g4"
   },
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.11.12",
+    "antlr4ts": "^0.5.0-alpha.4",
+    "antlr4ts-cli": "^0.5.0-alpha.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "gatsby": "^4.3.0",
@@ -31,6 +35,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-plotly.js": "^2.5.1",
-    "sass": "^1.44.0"
+    "sass": "^1.44.0",
+    "typescript": "^4.5.4"
   }
 }
