--- a/docs/package.json
+++ b/docs/package.json
@@ -15,13 +15,13 @@
     "clean": "gatsby clean",
     "build-plugins": "antlr4ts plugins/gatsby-transformer-python-docstring/src/antlr/Python3.g4 && tsc -b plugins/gatsby-transformer-python-docstring"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.11.12",
     "antlr4ts": "^0.5.0-alpha.4",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "dotenv": "^10.0.0",
     "gatsby": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sass": "^5.3.0",
@@ -29,6 +29,8 @@
     "gatsby-starter-olap": "file:plugins/gatsby-source-olap",
     "gatsby-transformer-remark": "^5.4.0",
     "lodash": "^4.17.21",
+    "minio": "^7.0.25",
+    "parquetjs-lite": "^0.8.7",
     "plotly.js": "^2.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
