--- a/docs/package.json
+++ b/docs/package.json
@@ -25,11 +25,14 @@
     "gatsby": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-remark-images": "^6.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-starter-olap": "file:plugins/gatsby-source-olap",
     "gatsby-transformer-remark": "^5.4.0",
     "lodash": "^4.17.21",
     "minio": "^7.0.25",
+    "node-gyp": "^8.4.1",
     "parquetjs-lite": "^0.8.7",
     "plotly.js": "^2.7.0",
     "react": "^17.0.1",
@@ -38,5 +41,6 @@
     "react-plotly.js": "^2.5.1",
     "sass": "^1.44.0",
     "typescript": "^4.5.4"
-  }
+  },
+  "main": "gatsby-config.js"
 }
