--- a/docs/package.json
+++ b/docs/package.json
@@ -38,6 +38,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-loadable": "^5.5.0",
     "react-plotly.js": "^2.5.1",
     "sass": "^1.44.0",
     "typescript": "^4.5.4"
