--- a/k8s/sparkify_star_schema.yaml
+++ b/k8s/sparkify_star_schema.yaml
@@ -9,8 +9,10 @@ spec:
   mode: cluster
   image: "dutradocker/spark-py:3.2.0"
   imagePullPolicy: Always
-  mainApplicationFile: s3a://dutrajardim-etls/sparkify_etls/sparkify_script.py
+  mainApplicationFile: s3a://dutrajardim-etls/sparkify_etls/etl.py
   arguments:
+  - "--no-standalone"
+  - "--job"
   - "star_schema_job"
   sparkVersion: "3.2.0"
   deps:
